--- a/.env.example
+++ b/.env.example
@@ -3,10 +3,10 @@ NEXT_PUBLIC_ENV='development'
 
 NEXT_PUBLIC_BASE_URI=https://dev.mina-bridge-api.sotatek.works/api/
 
-NEXT_PUBLIC_MINA_HOOKS_ADDRESS=B62qkhfPixXXqatVWzNwugqrcs9M51mJ5CEf59QFtgJh9yRAQDKYCv9
 # mina:mainet | mina:testnet | mina:bekeley
-NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:testnet
+NEXT_PUBLIC_ETH_BRIDGE_ADDRESS=0x00bA9C6204C791543B95a29cA1f0DDE68e228224
+NEXT_PUBLIC_MINA_HOOKS_ADDRESS=B62qrfzq3XWb97qokKVjkqHyiQpaBwm5akhG45BXu4sSiRam7xSS3iY
+NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:bekeley
 NEXT_PUBLIC_REQUIRED_ETH_NETWORK=sepolia
 NEXT_PUBLIC_REQUIRED_SNAP_ID=npm:mina-portal
-NEXT_PUBLIC_REQUIRED_SNAP_VERSION=0.1.5
-NEXT_PUBLIC_INTERVAL_HISTORY=30000
+NEXT_PUBLIC_REQUIRED_SNAP_VERSION=0.1.4
