refactor: config build

--- a/.github/workflows/develop.deploy.yml
+++ b/.github/workflows/develop.deploy.yml
@@ -3,7 +3,7 @@ run-name: ${{ github.actor }} is deploying develop branch🚀
 on:
   push:
     branches:
-      - "develop"
+      - 'develop'
 jobs:
   Deploy:
     runs-on: [mina-bridge-fe-admin-runner]
@@ -19,5 +19,4 @@ jobs:
       - run: |
           rm -rf .next
           yarn
-          yarn build
           pm2 restart develop.pm2.json
