update: cicd build

--- a/.github/workflows/testing.deploy.yml
+++ b/.github/workflows/testing.deploy.yml
@@ -19,5 +19,6 @@ jobs:
       - run: |
           rm -rf .next
           yarn
+          yarn build
           cp .env.example .env
           pm2 restart testing.pm2.json
