--- a/.env.example
+++ b/.env.example
@@ -2,9 +2,9 @@
 NEXT_PUBLIC_ENV='development'
 
 NEXT_PUBLIC_BASE_URI=https://test.mina-bridge-api.v2.sotatek.works/api/
+NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.works
 
 NEXT_PUBLIC_EVM_BRIDGE_CONTRACT_ADDRESS=0xa4045da3c53138F84C97668f6deFDf8f4C9348f6
-#NEXT_PUBLIC_MINA_HOOKS_ADDRESS=B62qrfzq3XWb97qokKVjkqHyiQpaBwm5akhG45BXu4sSiRam7xSS3iY
 
 # mina:mainet | mina:testnet | mina:bekeley
 NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:testnet
