--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,33 @@
-# 'production' | 'development'
+# Value: 'production' | 'development'
+# Description: set "development" to activate dev mode of packages, services.
+# set "production" to deactivate dev mode of packages, services.
 NEXT_PUBLIC_ENV='development'
 
+# Description: URI of APIs
 NEXT_PUBLIC_BASE_URI=https://test.mina-bridge-api.v2.sotatek.works/api/
+
+# Description: this static URI is where storing mina cache files (path: "/o1js/*")
+# the default files stored at public folder (path: "/caches/o1js/*") if you don't set value for this
 NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.works
 
-# mina:mainet | mina:testnet | mina:bekeley
+# Value: mina:mainet | mina:testnet | mina:bekeley
+# Description: mina environments
 NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:testnet
+
+# Description: this field is fixed, see network detail at "src/models/network/network.ts"
 NEXT_PUBLIC_REQUIRED_ETH_NETWORK=sepolia
-# https://sepolia.etherscan.io | https://etherscan.io
+
+# Value: https://sepolia.etherscan.io | https://etherscan.io
+# Description: evm scan uri
 NEXT_PUBLIC_REQUIRED_ETH_SCAN_URL=https://sepolia.etherscan.io
-# https://minascan.io/devnet | https://minascan.io/mainnet
+
+# Value: https://minascan.io/devnet | https://minascan.io/mainnet
+# Description: mina scan uri
 NEXT_PUBLIC_REQUIRED_MINA_SCAN_URL=https://minascan.io/devnet
+
+# Description: these fields is fixed for mina portal, change the version if needed
 NEXT_PUBLIC_REQUIRED_SNAP_ID=npm:mina-portal
 NEXT_PUBLIC_REQUIRED_SNAP_VERSION=0.1.5
 
+# Description: cookies expire time (unit: day(s))
 NEXT_PUBLIC_EXPIRE_COOKIE=10
