refactor: switch mina network

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,9 @@ NEXT_PUBLIC_BASE_URI=https://test.mina-bridge-api.v2.sotatek.works/api/
 # the default files stored at public folder (path: "/caches/o1js/*") if you don't set value for this
 NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.works
 
-# Value: mina:mainet | mina:testnet | mina:bekeley
+# Value: mina:mainnet | mina:devnet | zeko:testnet
 # Description: mina environments
-NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:testnet
+NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:devnet
 
 # Description: this field is fixed, see network detail at "src/models/network/network.ts"
 NEXT_PUBLIC_REQUIRED_ETH_NETWORK=sepolia
