--- a/.env.testingv2
+++ b/.env.testingv2
@@ -8,7 +8,7 @@ NEXT_PUBLIC_BASE_URI=https://dev.mina-bridge-api.v2-1.sotatek.works/api/
 
 # Description: this static URI is where storing mina cache files (path: "/o1js/*")
 # the default files stored at public folder (path: "/caches/o1js/*") if you don't set value for this
-NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.works
+# NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.works
 
 # Value: mina:mainnet | mina:devnet | zeko:testnet
 # Description: mina environments
@@ -24,6 +24,14 @@ NEXT_PUBLIC_REQUIRED_ETH_SCAN_URL=https://sepolia.etherscan.io
 # Value: https://minascan.io/devnet | https://minascan.io/mainnet
 # Description: mina scan uri
 NEXT_PUBLIC_REQUIRED_MINA_SCAN_URL=https://minascan.io/devnet
+
+# Description: rpc ethereum uri
+NEXT_PUBLIC_REQUIRED_ETH_RPC_MAINNET=https://mainnet.infura.io/v3/1b7a1af6054b4b4aa62d387f77eb5daa
+NEXT_PUBLIC_REQUIRED_ETH_RPC_SEPOLIA=https://ethereum-sepolia-rpc.publicnode.com
+
+# Description: rpc mina uri
+NEXT_PUBLIC_REQUIRED_MINA_RPC_MAINNET=https://api.minascan.io/node/mainnet/v1/graphql
+NEXT_PUBLIC_REQUIRED_MINA_RPC_DEVNET=https://api.minascan.io/node/devnet/v1/graphql
 
 # Description: these fields is fixed for mina portal, change the version if needed
 NEXT_PUBLIC_REQUIRED_SNAP_ID=npm:mina-portal
