--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ NEXT_PUBLIC_BASE_PUBLIC_STATIC_URI=https://uat-static.mina-bridge-v2.sotatek.wor
 
 # Value: mina:mainet | mina:testnet | mina:bekeley
 # Description: mina environments
-NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:testnet
+NEXT_PUBLIC_REQUIRED_MINA_NETWORK=mina:devnet
 
 # Description: this field is fixed, see network detail at "src/models/network/network.ts"
 NEXT_PUBLIC_REQUIRED_ETH_NETWORK=sepolia
