chore: update env

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Value: 'production' | 'development'
 # Description: set "development" to activate dev mode of packages, services.
 # set "production" to deactivate dev mode of packages, services.
-NEXT_PUBLIC_ENV='development'
+NEXT_PUBLIC_ENV=development
 
 # Description: URI of APIs
 NEXT_PUBLIC_BASE_URI=https://test.mina-bridge-api.v2.sotatek.works/api/
